--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "node ./bin/www",
     "start:dev": "nodemon --watch app.js --watch middleware --watch models --watch routes --exec node -- ./bin/www",
-    "test": "NODE_ENV=test nyc --reporter=text --reporter=html mocha --check-leakers --recursive --exit",
+    "test": "NODE_ENV=test nyc --reporter=text --reporter=html mocha --check-leaks --recursive --exit",
     "test:watch": "NODE_ENV=test mocha --check-leaks --recursive --watch"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-filenames": "^1.3.2",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
     "sinon": "^6.1.3",
     "sinon-chai": "^3.2.0",
     "supertest": "^3.1.0",
