--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.0",
