--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.0",
+    "latinize": "^0.4.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3"
