--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "NODE_ENV=test mocha --check-leaks --recursive --watch"
   },
   "dependencies": {
+    "aws-sdk": "^2.274.1",
     "bcrypt": "^3.0.0",
     "bookshelf": "^0.13.3",
     "cookie-parser": "~1.4.3",
@@ -23,10 +24,12 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "http-errors": "^1.6.3",
+    "jimp": "^0.2.28",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.0",
     "latinize": "^0.4.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3"
   },
